ipc/ipdl/test/ipdl/error/IntrSyncManager.ipdl
//error: protocol `IntrSyncManagee' requires more powerful send semantics than its manager `IntrSyncManager' provides

include protocol IntrSyncManagee;

sync protocol IntrSyncManager {
    manages IntrSyncManagee;
parent:
    async IntrSyncManagee();
};
